--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,8 +1,9 @@
 /* mobile */
 
 #main_header {
-    width: 57%;
+    width: 100%;
     text-align: center;
+    position: fixed;
   }
   
   #main_header .container {
@@ -12,6 +13,7 @@
   #main_header h1 {
     position: relative;
     font-size: 20px;
+    margin-right: 30px;
   }
   
   #gnb {
@@ -40,14 +42,19 @@
   
   #visual .title-group {
     position: absolute;
+    margin-left: 20px;
     width: 70%;
     top: 20%;
     left: 10%;
-    transform: translateY(-50%);
+    transform: translateY(-55%);
     text-transform: uppercase;
     padding: 15px;
     letter-spacing: 0.05em;
     font-size: 16px;
+  }
+
+  #visual .title-group .sub-txt {
+    font-size: 13px;
   }
   
   #visual .title-group h2 span{
@@ -68,6 +75,11 @@
     width: 100%;
   }
 
+  #about .sk,
+  #about .ill {
+    margin-left: 80px;
+  }
+
   #works .explan p {
     background: #ececec;
     height: 300px;
@@ -78,3 +90,12 @@
     text-align: left;
   }
   
+  #contact .cont li span {
+    font-size: 20px;
+  }
+
+  #contact h1 {
+    margin-top: 180px;
+    font-size: 80px;
+    text-align: center;
+  }
