--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@
       box-shadow:
        -50px -50px 0 -10px #fff, 
        -50px -50px 0 #202020;
-      width: 400px;
+      width: 450px;
       height: 530px;
       margin: 120px 0 0 50px;
   }
@@ -172,7 +172,8 @@
 
   #about .introduce {
     line-height: 2em;
-    margin-top: 130px;
+    margin-top: 95px;
+    margin-left: 50px;
   }
 
   #about .process {
@@ -194,14 +195,24 @@
     margin-bottom: 50px;
   }
 
-  #works .explan p {
-    background: #ececec;
+  #works .explain p {
     height: 300px;
-    line-height: 3.2em;
+    line-height: 2.5em;
     font-size: 20px;
     padding-left: 20px;
-    padding-top: 20px;
+    padding-bottom: 10px;
     text-align: left;
+  }
+
+  #works .explain p img {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    display: inline-block;
+  }
+
+  #works .explain img:first-child {
+    margin-left: 200px;
   }
 
   #works .list li { 
@@ -209,8 +220,6 @@
   }
   
   #works .list img {
-    background-color: #ececec;
-    padding: 25px 25px 25px 25px;
     width: 100%;
     height: 300px;
     display: block;
@@ -249,8 +258,8 @@
   }
 
   #contact h1 {
-    margin-top: 150px;
-    font-size: 100px;
+    margin-top: 250px;
+    font-size: 80px;
     text-align: center;
   }
 
